--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/N_logo-1.png" />
+    <link rel="icon" type="image/svg+xml" href="/N_logo-1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Md. Naim Howlader</title>
+    <title>Home | Md. Naim Howlader</title>
   </head>
   <body>
     <div id="root"></div>
